# print-flat-tree

./: .travis.yml  Cargo.toml  README.md
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
src/: lib.rs  main.rs
